Tweaked responsive things that show & hide a bit, especially in thread (also fixed wrong padding around avatar)

--- a/static/default/less/app-mobile/global.less
+++ b/static/default/less/app-mobile/global.less
@@ -16,4 +16,9 @@
   #sidebar { display: none; }
   #content { margin-left: 0px; }
 
+  /* Pile */
+  #pile-results td.draggable { display: none; }
+  #pile-results td.avatar { padding-left: 12px; }
+
+
 }
