--- a/static/default/less/app-tablet/global.less
+++ b/static/default/less/app-tablet/global.less
@@ -11,4 +11,9 @@
   #sidebar { display: none; }
   #content { margin-left: 0px; }
 
+  /* Pile */
+  #pile-results td.draggable { display: none; }
+  #pile-results td.avatar { padding-left: 18px; }
+
+
 }
