--- a/static/default/less/app-web/pile.less
+++ b/static/default/less/app-web/pile.less
@@ -33,7 +33,7 @@
     cursor: move;
   }
 
-  #pile-results        td.avatar       { min-width: 48px; }
+  #pile-results        td.avatar       { min-width: 14px; }
   #pile-results        td.avatar a img { width: 24px; height: 24px; }
   #pile-results.fluffy td.avatar       { width: 48px; }
   #pile-results.fluffy td.avatar a img { display: block; width: 48px; height: 48px; }
