--- a/static/default/less/app-web/thread.less
+++ b/static/default/less/app-web/thread.less
@@ -292,7 +292,6 @@
     background: @grayLight;
     border-radius: 7px;
     border: 1px solid @grayMid;
-    cursor: pointer;
   }
 
   .button-signature-contact {
